test/files/pos/t3772b.scala
object Test extends App {
  {
    case class C(x: Int)
    object C
  }
}
