test/files/neg/macro-invalidusage-expands-to-apply-d/Macros_Test_2.scala
object Macros {
  type Foo(x: Int) = macro Impls.foo
}

object Test extends App {
  import Macros._
  class D extends AnyRef with Foo(2)
}